@@ -7,18 +7,20 @@ DIST llpp-13_p20121123.tar.gz 110436 SHA256 367c01e14478b18c39a34bc515f495b98078
 DIST llpp-15.tar.gz 109546 SHA256 cc415775a62144f8e4185f5d550952b6d2d573072b5b7d91bc8c09c564ce156c SHA512 96f4720f2ee0d9d2d5903ed452e7314e08d14a5806b13d439e01bfd4121fe714f5146e0cb6b33bced3c9c4b652ed8c9334070643e66276f07ea9e9b50d8b5b93 WHIRLPOOL 097871bcb121807eb1d5211254e8670c0cc08eb79787d9255217d10841a0e2436ee50194f038023efa052a4db4e5ac251dd88215ef44ae966689ff03cf79252a
 DIST llpp-16.tar.gz 114433 SHA256 7c33656d064237ec121d73622845b1d44005c1c1b7ab46e947b295833bd4a6bd SHA512 081dc9c614ec375f45ad2d1c0c6232ab7596f0f419d3e05b7ceb9635bc32ff7f605479fc0005ecee6bb810886dc69a9f2a9dfae22fccd9a25cb38fdb52658181 WHIRLPOOL f234e7231db97c63b44e0b6301ac0a08542d5b6f71eed76da1da4464a9a1bd4a2f1b1ecd940a030495c182df1a41884ffd4d42a24be90e1b7f812abb227f9005
 DIST llpp-16_p20130828.tar.gz 115059 SHA256 9b315b5be58d283e8f579bae72dafbbc6d8e387de43532a8a9f174b402a3e065 SHA512 4ecea1f28968e2d99c40901fa30e028d921ccc32537a3ebcfcb4245a8899293f215ba0a7ab23a37b7b536959c9df929072710a988addda1f0ca30b4c6641023d WHIRLPOOL a1b4871ae8a14c01f474cb493e7506a6bba3ea2120694f9c44f7bd036789d6dbaf0497cf786b48d5a7362a9cfe3d07ff4801b7439624b0c4ba9bd6e65e48c499
+DIST llpp-17_p20140112.tar.gz 118951 SHA256 7d1ae89762054d9cb4fc06af11f766ab1c638ed230213dbcf36837b9379cc612 SHA512 38249f67a7151622833cba7e19de218f43110724ca9a304f4b80ac95661c71d01a1024fac30cf66c5013669545fb08bf320225d9463d2c31844446dc3c99de0c WHIRLPOOL c67b3e60bce82dc142624d3183144230d5a42921a203f19337f0a14942aec6fb395c57edf123b1d8127ce92c90df142b3caa11b4c14ec986aa2ad6d2fae6a383
 EBUILD llpp-12.ebuild 1561 SHA256 92eb909dbacb1985d490042522a893faad7e6a3e54f5230efd2f9c909b5fc78d SHA512 54053879b37a94a307f8c09777bf210bf5eb7d78b1dcf04f0d03e6163badd1c2db51d484a1ad1e37f31a8287e22ff7448f2560e0e9a47c2d2e745b0f35994d10 WHIRLPOOL ffd662d667f62e9199879c9c7b62401c09801d075ccf060af039933e260156124551e30fa139f0184137c8259003d93e2e37f558d174398a41316e33dd467d9c
 EBUILD llpp-13_p20121123.ebuild 1557 SHA256 c7983c466e0cddc9ebb101f06cb5b83decd85ad82ba9cc1ab173b2f92fabb474 SHA512 38d0e1aaf4fb5ec72e11a31ee6321e56bfd3022d9cbc8475fe3450c02511292a30fe801ce8f14e5c42e3d1b42c5d44da4833675315c33e156efc22a14cd2e505 WHIRLPOOL 931c3fc2f9539352a4df0c8fb946086e2cbce6c3525c53429bb719db7ed4bf0237817f56ec33624aa8a68f79f8a8b03ed468b7df426c33810672ba8f8e709ee8
 EBUILD llpp-15.ebuild 2741 SHA256 72f9affc1a153d411e842ea17bb6a88d9aa79c5e6f04d2c9be45b82351a2586a SHA512 8d90f952f21047d429ccb5e8b1987850c1d72589ec6c0c0b4d33f8c4488b51baf2c8b87d29d539152eae123d8a2deec7d8e772df4b86eae25f4b6e59ba4dcd69 WHIRLPOOL d4fc7c6df4146ba87165530201866ff64332ab8f816968bf900488cdf4e4c3ff6daa0be0eff32de954997f2a74d4d4bca8d2be0c7e61e15da6529db1b88f3584
 EBUILD llpp-16.ebuild 2824 SHA256 a1860a40081ae59254cd8ecd9e8fde4fada49f35941ebc936f908b15a4faa0a3 SHA512 3035f9d496dfdf8c8a0fb657ba0b15bc6d746d7b76f7b8483b460441ab50494c90d9aff3353ac18ea5b69e414ead4c27523e1c3b42816164c11426f7a54fa9b1 WHIRLPOOL 64b9027baa259502825e9f99b9b3704ef5cad149ce21314095471ac7a796be274da6517bfbe28c94e90d8f9b10d91e744bca858084c12ffc6b8be1905068bffc
 EBUILD llpp-16_p20130828.ebuild 2882 SHA256 ab633c6b66f0a53f4ba8ee72db2da8452fc27aaefe4a6dfeb610604acf215c93 SHA512 a0ac2cd93363b673cb47e9d29eb7fa72fb2195f99d5b68f7f62bb64b4e4ad734dee7f72a7f7e42fbe801657c3ad58b044215723f75044b56ef52776e42d246b2 WHIRLPOOL cc6a3fb8d8fd23f14c754befac68f0d0434ca34c313c38b26d1ab81c275589d94738aa2b9bd3a3f93d25297155a99e307c3e30dfa818b72452a7a34f41d7e3e2
+EBUILD llpp-17_p20140112.ebuild 2882 SHA256 cae0d2dd9556ab8b1476e8d78ddd84d125acb2170c922467c7e30c64510e33e5 SHA512 1016350ec905b3e6562ca8f827ce08bdc7c94d704312973518f233bec4cce4ad23e701a166031f4ee7411b5c45de551b52b7edcca2521f3d617507d1afddce3f WHIRLPOOL 2e59fb7a689f6bc143a048fe9987a2d7d82b19043325e04877dda4614e79dff80cb7e85edf312bda313d3cf07b50e68add64d3767fcce89a5a6739ec2d926efb
 EBUILD llpp-9999.ebuild 2724 SHA256 da248ac48adc856fa78c3ba4b64398d976af9015a7043378d2d387c95e4c2813 SHA512 7baa29e6ad9a9e910ec776722711d54f6610c346c95d61eb9a66fb1447625da8a65d4e7cbaaf17253fb8a5e2d1cf47bc3bd66daa9ed37289dd22e61c1d0cb003 WHIRLPOOL 348953b1fd337dc6d7d9a24a4ac0e17e74412caa4c6effa0d64b3b059924b8c65b1cdfcf6c8b3533ea8c2ee72bd79aab67c3e212a45285d2d430203691e391af
-MISC ChangeLog 7298 SHA256 ec35950e2d7530b5573d9ddc06408a49e2f780cf34eb59676fbeca3d5523e86b SHA512 9cf0a4b93600ebfbb1de2e2cb6a48502ae2cd88b5c672acdd85c7bda281f779689ac907c3517bfe3263c86ff244616025686f4f57375c9cd346537936aa52921 WHIRLPOOL 2eb1fc0c74ba679bcb937c3de44950bf1648153c2e1635f28bd13d8585a28d2a918b18330592079a59e83a2cff01cdf8696008029a07640e052def67f28a1bf1
+MISC ChangeLog 7419 SHA256 66d840ff7a4e3dbfe9edd23320a810e561cec000b4e892bb63954b95cae0e28f SHA512 cff228ef99dda4b0a58f786d7a76c3b3906b5d9a2748b4c9e9f58536f0de3883b3bd666799d1f105ba1fabf729339021b2a42dde121e9caef72b1fd71a6bb6c3 WHIRLPOOL d50f22396e9d14fb98a058abf00e1f16bae41e9a01133482c57e423651dbd782acf71362955b3bfc73d8d2c92a4031a46bfa3c6c3638a76f92c078f1d3c3f541
 MISC metadata.xml 224 SHA256 f810c6de744adceee241992d3f713142db3e7025986f6cc5898cfe3c9cb2f4a7 SHA512 4f78d959809ec0db2f9be2a7747d572fa8ee03d177044dd46574881a6ee83736510b76062c12daecae609282d197ba466e8a3e3a654b1383e04c659acd41bef5 WHIRLPOOL 0300a228d371c918b051bc24859dfe4e5d0d2a71b80f697f202749c5aca69efcee4be6e69454c9abfa4ced28e19a9d1f71d6d7eaf54290b8d03b5c04fd209868
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLbkmQACgkQCaWpQKGI+9RqLwCeOLT6gbCz75U+8Jl5i8BHpxm0
-d9wAn3SW3b2eW6sKq5R+uLxQjOVi6SEf
-=xoY3
+iF4EAREIAAYFAlLffRMACgkQknrdDGLu8JC3kwD/Z61fhirSChvIjNPynjcWpwXy
+nkt9uHn//PfVxG3tKvEA/RFGCupBAGdzaS2xR8z7ZdC2/3gvtlQKcyl6pPuV/VHq
+=hxWX
 -----END PGP SIGNATURE-----
