@@ -1,6 +1,11 @@
 # ChangeLog for app-text/llpp
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/llpp/ChangeLog,v 1.54 2014/01/19 08:52:51 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/llpp/ChangeLog,v 1.55 2014/01/22 08:10:58 xmw Exp $
+
+*llpp-17_p20140112 (22 Jan 2014)
+
+  22 Jan 2014; Michael Weber <xmw@gentoo.org> +llpp-17_p20140112.ebuild:
+  Version bump
 
   19 Jan 2014; Pacho Ramos <pacho@gentoo.org> llpp-15.ebuild:
   amd64 stable, bug #472532
